# etopay-sdk

./: .clippy.toml  .editorconfig  .env.example  .gitignore  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml  index.html  sonar-project.properties  versions.json
api_types/: Cargo.toml
api_types/src/api/: account.rs  decimal.rs  dlt.rs  generic.rs  kyc.rs  mod.rs  networks.rs  postident.rs  user.rs
api_types/src/api/transactions/: create.rs  details.rs  mod.rs  status.rs
api_types/src/api/viviswap/: contract.rs  course.rs  currency.rs  detail.rs  mod.rs  order.rs  payment.rs  user.rs
bindings/android/: .gitignore  Cargo.toml  README.md  pom.xml  settings.xml
bindings/android/src/: lib.rs  type_conversions.rs
bindings/android/tests/: .gitignore  build.gradle
bindings/swift/: Cargo.toml  Makefile  README.md  build.rs
bindings/swift/ETOPaySdk/: Package.swift
bindings/swift/examples/: Makefile  Package.swift  run_all_examples.sh
bindings/swift/src/: ffi_functions.rs  lib.rs  type_conversion.rs
crates/etopay-wallet/: .clippy.toml  Cargo.toml
crates/etopay-wallet/src/: error.rs  lib.rs  wallet.rs  wallet_evm.rs  wallet_rebased.rs  wallet_stardust.rs  wallet_tx_sort.rs
crates/etopay-wallet/src/migrations/: decorator.rs  legacy.rs  migrate.rs  mod.rs  status.rs  types.rs
crates/etopay-wallet/src/rebased/: bigint.rs  client.rs  error.rs  keystore.rs  mod.rs  traits.rs  transaction_formatter.rs  transaction_reader.rs
crates/etopay-wallet/src/types/: currencies.rs  migrations.rs  mod.rs  time.rs  transactions.rs
crates/etopay-wallet/src/wallet/: mod.rs  traits.rs
sdk/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  mkdocs.yml  package.json
sdk/bindings/android/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  pom.xml
sdk/bindings/android/src/: lib.rs  type_conversions.rs
sdk/bindings/android/tests/: build.gradle
sdk/bindings/swift/: .gitignore  Cargo.toml  Makefile  README.md  main.swift
sdk/bindings/swift/CawaenaSdk/: README.md
sdk/bindings/swift/CryptpaySdk/: Package.swift  README.md
sdk/bindings/swift/examples/: Makefile  Package.swift  main.swift  run_all_examples.sh
sdk/bindings/swift/include/: bridging-header.h  module.modulemap
sdk/bindings/swift/src/: ffi_functions.rs  lib.rs  type_conversion.rs  utils.rs
sdk/bindings/wasm/: Cargo.toml  README.md  package.json  public-README.md  tsconfig.json  typedoc.json
sdk/bindings/wasm/.cargo/: config.toml
sdk/bindings/wasm/examples/: 01-create_new_user.ts  02-onboard_user_via_postident.ts  03-create_new_wallet.ts  04-migrate_wallet_from_mnemonic.ts  05-migrate_wallet_from_backup.ts  06-generate_new_address.ts  07-get_balance.ts  08-create_purchase_request.ts  09-onboard_user_via_viviswap.ts  10-verify_pin.ts  11-reset_pin.ts  12-change_password.ts  13-send_amount.ts  14-get_exchange_rate.ts  15-claim_output.ts  16-get_tx_list.ts  17-create_customer.ts  18-delete_user.ts  19-get_wallet_tx_list.ts  20-send_compliment.ts  run_all_examples.sh  utils.js  utils.ts
sdk/bindings/wasm/src/: lib.rs  types.rs  utils.rs
sdk/docs/: index.md
sdk/docs/Choosing Cawaena/: Architecture.md  Features.md  Licensing.md  Philosophy.md
sdk/docs/Choosing Cryptpay/: Architecture.md  Features.md  Licensing.md  Philosophy.md
sdk/docs/Choosing ETOPay/: Architecture.md  Philosophy.md
sdk/docs/Installing the SDK/: Installation.md  JS_TS.md  Java.md  Rust.md  Swift.md
sdk/docs/SDK Configuration/: Configuration.md
sdk/docs/SDK Examples/: Examples.md
sdk/docs/SDK Modules/: KYC Onboarding.md  Managing user.md  Managing wallet.md  Transactions_Swaps_Purchases.md
sdk/docs/SDK Reference/: SDK API Reference.md
sdk/docs/SDK Release Notes/: Release Notes.md
sdk/docs/Under the Hood/: SDK Internals.md
sdk/docs/stylesheets/: extra.css
sdk/examples/: 01_create_new_user.rs  02_onboard_user_postident.rs  03_create_new_wallet.rs  04_migrate_wallet_from_mnemonic.rs  05_migrate_wallet_from_backup.rs  06_generate_new_address.rs  07_get_balance.rs  08_create_purchase_request.rs  09_onboard_user_viviswap.rs  10_verify_pin.rs  11_reset_pin.rs  12_change_password.rs  13_send_amount.rs  13_send_amount_iota_rebased.rs  13_send_amount_rebased.rs  14_get_exchange_rate.rs  15_claim_output.rs  16_get_tx_list.rs  17_create_customer.rs  18_delete_user.rs  19_get_wallet_tx_list.rs  20_send_compliment.rs  22_init_wallet_from_shares.rs  23_iota_rebased_est_gas.rs  run_all_examples.sh  utils.rs
sdk/overrides/: main.html
sdk/src/: error.rs  lib.rs  logger.rs  testing_utils.rs
sdk/src/backend/: account.rs  dlt.rs  error.rs  kyc.rs  mod.rs  postident.rs  shares.rs  transactions.rs  user.rs  viviswap.rs
sdk/src/core/: account.rs  config.rs  core_testing_utils.rs  exchange.rs  mod.rs  postident.rs  share.rs  transaction.rs  user.rs  wallet.rs
sdk/src/core/viviswap/: kyc.rs  mod.rs  swap.rs
sdk/src/core/wallet_helpers/: confirm_pending_transactions.rs  hashes_to_transactions.rs  merge.rs  migrate.rs  mod.rs  slice.rs
sdk/src/types/: crypto.rs  currencies.rs  error.rs  mod.rs  networks.rs  newtypes.rs  transactions.rs  users.rs  viviswap.rs
sdk/src/user/: error.rs  file_storage.rs  memory_storage.rs  mod.rs  repository.rs  web_storage.rs
sdk/src/wallet/: error.rs  kdbx.rs  mod.rs  share.rs  tx_version.rs  wallet.rs  wallet_evm.rs  wallet_manager.rs  wallet_rebased.rs  wallet_stardust.rs  wallet_user.rs  wallet_user_eth.rs  wallet_user_evm.rs  wallet_user_stardust.rs
sdk/tests/: rt_account.rs  rt_config.rs  rt_postident.rs  rt_transaction.rs  rt_user.rs  rt_viviswap.rs  rt_wallet.rs
sdk/tests/utils/: mod.rs
testing/: Cargo.toml
testing/src/: auth.rs  cleanup.rs  keycloak.rs  lib.rs  testuser.rs
tools/jnigen-build/: Cargo.toml
tools/jnigen-build/src/: lib.rs
tools/jnigen-common/: Cargo.toml
tools/jnigen-common/src/: lib.rs
tools/jnigen-integration-test/: .gitignore  Cargo.toml  Makefile  build.gradle  build.rs
tools/jnigen-integration-test/src/: lib.rs
tools/jnigen-macro/: Cargo.toml
tools/jnigen-macro/src/: lib.rs
(+1739 files in other folders)
