[package]
name = "api_types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { workspace = true, features = ["std"] }
serde = { workspace = true }
rust_decimal = { workspace = true }
utoipa = { version = "5.3", default-features = false, features = [
    "macros",
    "decimal",
], optional = true }

[features]
# Enable to derive utoipa::{IntoParams, ToSchema} for the types.
utoipa = ["dep:utoipa"]

[lints]
workspace = true
