[package]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

name = "etopay-sdk-jni"
description = "The SDK java native bindings for use in java based applications and android"

[lib]
name = "etopaysdk"
crate-type = ["cdylib"]

[lints]
workspace = true


[features]
default = ["postident", "viviswap-kyc", "viviswap-swap"]
postident = ["sdk/postident"]
viviswap-kyc = ["sdk/viviswap-kyc"]
viviswap-swap = ["sdk/viviswap-swap"]

[dependencies]
jni = { workspace = true }
jnigen-macro = { path = "../../tools/jnigen-macro" }
once_cell = { workspace = true }
sdk = { package = "etopay-sdk", path = "../../sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[target.'cfg(target_os="android")'.dependencies]
jni = { workspace = true }

[build-dependencies]
jnigen-build = { path = "../../tools/jnigen-build" }

# cargo-machete thinks that `jni`, `jnigen-build` and `xml` dependencies are unused, but they are actually needed
[package.metadata.cargo-machete]
ignored = ["jni", "jnigen-build", "xml"]
