[package]
name = "etopay-wallet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true


[lints]
workspace = true

[features]
mock = ["dep:mockall"]
jammdb = ["iota-sdk/jammdb"]

[dependencies]
api_types = { workspace = true }

async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["std", "now", "wasmbind"] }
log = { workspace = true }
mockall = { workspace = true, optional = true }
reqwest = { workspace = true }
rmp-serde = { version = "1.3.0", default-features = false, optional = true }
rand = { workspace = true, default-features = false, features = [
    "os_rng",
    "thread_rng",
] }
rand8 = { package = "rand_core", version = "0.6", default-features = false, features = [
] }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
zeroize = { version = "1.8", default-features = false, features = [
    "std",
    "zeroize_derive",
] }

# for Stardust support
iota-sdk = { package = "etospheres-labs-iota-sdk", version = "1.1.5", default-features = false, features = [
    "wallet",
    "tls",
    "storage",
    # these are enabled in the "default" feature
    # "jammdb",
] }

# for EVM support
alloy = { version = "0.15", default-features = false, features = [
    "providers",
    "rpc-types",
    "signer-mnemonic",
    "contract",
    "sol-types",
] }
alloy-consensus = { version = "0.15", features = ["k256"] }
alloy-primitives = { version = "1.0", default-features = false }
alloy-provider = { version = "0.15", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-json-rpc = "0.15"
alloy-transport = "0.15"

# needed for custom iota-rebased impl
serde_with = { version = "3.12", features = ["macros", "hex"] }
hex = { version = "0.4" }
tiny-bip39 = "2"
slip10_ed25519 = "0.1.3"
bcs = "0.1.6"
serde_repr = "0.1.20"
ref-cast = "1"
serde-name = "0.2"
indexmap = "2.9"
bip32 = "0.5"

# needed to replace fastcrypto
ed25519-consensus = { version = "2.1", features = [] }
blake2 =  "0.10"
digest = "0.10"
base64ct = "1.7"
bs58 = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# needed for iota-rebased impl
jsonrpsee = { version = "0.25", default-features = false, features = [
    "macros",
    "async-client",
    "http-client",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# needed for iota-rebased impl
jsonrpsee = { version = "0.25", default-features = false, features = [
    "macros",
    "async-wasm-client",
    "wasm-client",
] }

[dev-dependencies]
dotenvy = { workspace = true }
env_logger = "0.11.8"
fake = { workspace = true }
fluent-assertions = { workspace = true }
mockall = { workspace = true }
mockito = { workspace = true }
rstest = { workspace = true }
rstest_reuse = "0.7.0"
testing = { workspace = true }
walkdir = { version = "2", default-features = false }


# cargo-machete thinks some crates are unused, but they are actually needed
[package.metadata.cargo-machete]
ignored = ["tiny-bip39"]

