[package]
name = "etopay-wallet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
mock = ["dep:mockall"]

[dependencies]
api_types = { workspace = true }

async-trait = { version = "0.1.88", default-features = false }

mockall = { workspace = true, optional = true }

rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true, features = ["std", "now", "wasmbind"] }

log = { workspace = true }
reqwest = { workspace = true }

rand = { version = "0.9", default-features = false, features = [
    "os_rng",
    "thread_rng",
] }

rand_0_8 = { package = "rand_core", version = "0.6", default-features = false, features = [ ] }
zeroize = { version = "1.8", default-features = false, features = [ "std", ] }

# For EVM impl
alloy = { version = "1.0.6", default-features = false, features = [
    "providers",
    "rpc-types",
    "signer-mnemonic",
    "contract",
    "sol-types",
] }
alloy-consensus = { version = "1.0.6", features = ["k256"] }
alloy-primitives = { version = "1.1", default-features = false }
alloy-provider = { version = "1.0.6", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-json-rpc = "1.0.6"
alloy-transport = "1.0.6"

# For IOTA stardust
iota-sdk = { package = "etospheres-labs-iota-sdk", version = "1.1.5", default-features = false, features = [
    "wallet",
    "tls",
    "storage",
    # these are enabled in the "default" feature
    # "jammdb",
] }

# needed for custom iota-rebased impl
serde_with = { version = "3.12", features = ["macros", "hex"] }
hex = { version = "0.4" }
tiny-bip39 = "2"
slip10_ed25519 = "0.1.3"
bcs = "0.1.6"
serde_repr = "0.1.20"
ref-cast = "1"
serde-name = "0.2"
indexmap = "2.9"
bip32 = "0.5"

# needed to replace fastcrypto
ed25519-consensus = { version = "2.1", features = [] }
blake2 =  "0.10"
digest = "0.10"
base64ct = "1.7"
bs58 = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fern-logger = { version = "0.5.0", default-features = false }

# needed for iota-rebased impl
jsonrpsee = { version = "0.25", default-features = false, features = [
    "macros",
    "async-client",
    "http-client",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# needed for iota-rebased impl
jsonrpsee = { version = "0.25", default-features = false, features = [
    "macros",
    "async-wasm-client",
    "wasm-client",
] }


[dev-dependencies]
mockall = { workspace = true }
mockito = { workspace = true }
rstest = { workspace = true }
testing = { workspace = true }
