[package]
name = "etopay-wallet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
undocumented_unsafe_blocks = "deny"

[lints.rust]
# this is set by cargo-llvm-cov while running code coverage and is used to skip tests
# that take way to much time
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[features]
mock = ["dep:mockall"]


[dependencies]
api_types = { workspace = true }

async-trait = { version = "0.1.88", default-features = false }

mockall = { workspace = true, optional = true }

rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["std", "now", "wasmbind"] }
log = { version = "0.4.27", default-features = false }
reqwest = { workspace = true }

rand = { version = "0.9", default-features = false, features = [
    "os_rng",
    "thread_rng",
] }

zeroize = { version = "1.8", default-features = false, features = ["std"] }

# For EVM impl
alloy = { version = "1.0.8", default-features = false, features = [
    "providers",
    "rpc-types",
    "signer-mnemonic",
    "contract",
    "sol-types",
] }
alloy-consensus = { version = "1.0.8", features = ["k256"] }
alloy-primitives = { version = "1.1", default-features = false }
alloy-provider = { version = "1.0.8", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-json-rpc = "1.0.8"
alloy-transport = "1.0.9"


# needed for custom iota-rebased impl
serde_with = { version = "3.12", features = ["macros", "hex"] }
hex = { version = "0.4" }
tiny-bip39 = { version = "2", default-features = false }
slip10_ed25519 = "0.1.3"
bcs = "0.1.6"
serde_repr = "0.1.20"
ref-cast = "1"
serde-name = "0.2"
indexmap = "2.9"
bip32 = "0.5"

# needed to replace fastcrypto
ed25519-consensus = { version = "2.1", features = [] }
blake2 = "0.10"
digest = "0.10"
base64ct = { version = "1.7", features = ["alloc"] }
bs58 = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# needed for iota-rebased impl
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmtimer = "0.4.1"
wasm-bindgen = { version = "0.2.98", default-features = false }
web-time = "1.1.0"


[dev-dependencies]
mockall = { workspace = true }
mockito = { workspace = true }
rstest = { workspace = true }
testing = { workspace = true }
tiny-bip39 = { version = "2", default-features = false, features = ["rand"] }


[package.metadata.cargo-machete]
ignored = ["tiny-bip39"]
