[package]
name = "jnigen-build"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "The entry point for the jnigen build script"


[dependencies]
jnigen-common = { path = "../jnigen-common" }
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote = { workspace = true }
syn = { workspace = true }


[lints]
workspace = true

# cargo-machete thinks that `proc-macro2` is unused, but it is actually needed
[package.metadata.cargo-machete]
ignored = ["proc-macro2"]
